@@ -1,1 +1,2 @@
 Otto Bruggeman <otto.bruggeman@home.nl>
+John Firebaugh <jfirebaugh@kde.org>
