@@ -1,1 +1,3 @@
+KDiff 0.1
 
+Kdiff is a program to view the differences of 2 files with
