@@ -8,7 +8,8 @@ noinst_HEADERS =  kdiff_part.h kdiff_actions.h \
         kdiffview.h diffview.h prefsbase.h \
         kdiffprocess.h diffprefs.h diffsettings.h generalprefs.h \
         generalsettings.h kdiffprefdlg.h miscprefs.h miscsettings.h \
-        settingsbase.h diffmodel.h difference.h diffhunk.h
+        settingsbase.h diffmodel.h difference.h diffhunk.h \
+	kdiffstatsdlg.h
 
 # let automoc handle all of the meta source files (moc)
 METASOURCES = AUTO
@@ -20,7 +21,9 @@ libkdiffpart_la_SOURCES = kdiff_part.cpp kdiff_actions.cpp \
         diffmodel.cpp difference.cpp diffhunk.cpp kdiffview.cpp diffview.cpp \
         diffsettings.cpp kdiffprocess.cpp settingsbase.cpp \
         miscsettings.cpp generalsettings.cpp kdiffprefdlg.cpp \
-        diffprefs.cpp miscprefs.cpp generalprefs.cpp prefsbase.cpp
+        diffprefs.cpp miscprefs.cpp generalprefs.cpp prefsbase.cpp \
+	kdiffstatsdlg.cpp
+
 libkdiffpart_la_LDFLAGS = -module $(KDE_PLUGIN) $(all_libraries)
 libkdiffpart_la_LIBADD  = $(LIB_KPARTS) $(LIB_KFILE)
 
