@@ -3,6 +3,8 @@
 <MenuBar>
   <Menu name="file"><text>&amp;File</text>
     <Action name="file_save"/>
+    <Separator/>
+    <Action name="file_diffstats"/>
   </Menu>
   <Menu name="difference"><text>&amp;Difference</text>
     <Action name="difference_previousfile"/>
